[package]
name = "rust-sudoku"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.3.25"
egui-macroquad = "0.15.0"
serde = "1.0.169"
serde_derive = "1.0.169"
serde-big-array = "0.5.1"
serde_json = "1.0.100"

[target.'cfg(target_arch = "wasm32")'.dependencies]
quad-storage = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }

[profile.release]
strip = true
opt-level = 3

[profile.dev.package.'*']
opt-level = 3